syntax = "proto3";

// Package common.v1 содержит общие типы данных
package common.v1;

option go_package = "github.com/CantDefeatAirmanx/space-engeneering/shared/pkg/proto/common/v1;common_v1";

// PaymentMethod описывает метод оплаты
enum PaymentMethod {
    // PAYMENT_METHOD_UNKNOWN_UNSPECIFIED неизвестный метод оплаты
    PAYMENT_METHOD_UNKNOWN_UNSPECIFIED = 0;
    // PAYMENT_METHOD_CARD оплата картой
    PAYMENT_METHOD_CARD = 1;
    // PAYMENT_METHOD_SPB оплата через СПБ
    PAYMENT_METHOD_SPB = 2;
    // PAYMENT_METHOD_CREDIT_CARD оплата кредитной картой
    PAYMENT_METHOD_CREDIT_CARD = 3;
    // PAYMENT_METHOD_INVESTOR_MONEY оплата инвестиционными деньгами
    PAYMENT_METHOD_INVESTOR_MONEY = 4;
}
